--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   ],
   "scripts": {
     "compile:sass": "npm run compile:sass --workspace=packages/scss-theme",
+
+    "compile:sass:information-box": "npm run compile:sass --workspace=apps/information-box",
     "build:information-box": "npm run build --workspace=apps/information-box",
     "start:information-box": "npm run start --workspace=apps/information-box"
   }
