Feat: positioning test push

--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "start:float-test": "npm run start --workspace=apps/float-test",
 
     "build:positioning-test": "npm run build --workspace=apps/positioning-test",
-    "start:positioning-test": "npm run start --workspace=apps/positioning-test"  
+    "start:positioning-test": "npm run start --workspace=apps/positioning-test",
+
+    "build:flexbox-test": "npm run build --workspace=apps/flexbox-test",
+    "start:flexbox-test": "npm run start --workspace=apps/flexbox-test" 
   }
 }
